# Watchtower

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/config/: services.yaml
app/core/: checker.py  graph.py  models.py  scheduler.py  store.py
app/exporters/: prometheus.py  slack.py
grafana/provisioning/dashboards/: dashboard.yml  watchtower.json
mock/: Dockerfile  server.py
prometheus/: prometheus.yml
tests/: conftest.py  test_checker.py  test_graph.py  test_models.py
