[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchtower"
version = "1.0.0"
description = "Health Check Aggregator with transitive dependency graph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
